tests/test_output_GOD_SPEED.txt
============================= test session starts ==============================
platform darwin -- Python 3.12.0, pytest-9.0.3, pluggy-1.6.0
rootdir: /Users/laxmanacharya/Desktop/BhavCopy/Dashboard
plugins: mock-3.15.1
collected 26 items

tests/test_nde_logic.py ...............FF.F......F                       [100%]

=================================== FAILURES ===================================
_________________________ test_playbook_mapping_rules __________________________

    def test_playbook_mapping_rules():
        """Verifies strategy playbook mappings for different regimes."""
        # Mock raw_exp for viability
        raw_exp = pd.DataFrame([
            {"strike": 22700, "type": "CALL", "ltp": 50.0, "oi": 50000},
            {"strike": 22900, "type": "CALL", "ltp": 10.0, "oi": 20000},
            {"strike": 22300, "type": "PUT", "ltp": 50.0, "oi": 50000},
            {"strike": 22100, "type": "PUT", "ltp": 10.0, "oi": 20000}
        ])
        gamma_metrics = {"gex_norm": 5.0, "tv_label": "NORMAL", "flow_regime_label": "Long Gamma", "raw_exposures": raw_exp}
        auto_metrics = {"drift": 0.05, "stability": 80} # stability 80 to pass WAIT block
        spot = 22500
        walls = (22700, 22300)
        iv_data = {"iv_rank": 45.0}
        quality_score = 8.5
        size = 1.0
        bias_obj = {"bias": "Bullish"}
        rev_score_obj = {"score": 7.5, "label": "HIGH_REVERSION", "reason": ["Away from flip"]}
    
        # 1. Long Gamma + Mid-range (Stability 70 < 75) -> WAIT
        auto_metrics["stability"] = 70
        playbook = nde_strategy_logic.generate_strategy_playbook(
            "MEAN_REVERSION", gamma_metrics, auto_metrics, spot, walls, iv_data,
            quality_score, size, bias_obj, rev_score_obj, dte=3
        )
        assert playbook["action"] == "WAIT"
        assert "Wait for Extremes" in playbook["strategy"]
        assert playbook["strike_plan"]["suppressed"] is True
    
        # 2. Long Gamma + Near Upper Wall -> Fade Resistance
        auto_metrics["stability"] = 80
        playbook = nde_strategy_logic.generate_strategy_playbook(
            "MEAN_REVERSION", gamma_metrics, auto_metrics, 22695, walls, iv_data,
            quality_score, size, bias_obj, rev_score_obj, dte=3
        )
        assert playbook["action"] == "FADE_RESISTANCE"
        assert "FADE_RESISTANCE" in playbook["strategy"]
>       assert "Tactical Credit Spread" in playbook["strategy"]
E       AssertionError: assert 'Tactical Credit Spread' in 'FADE_RESISTANCE'

tests/test_nde_logic.py:567: AssertionError
___________________________ test_playbook_guardrails ___________________________

    def test_playbook_guardrails():
        """Verifies Phase 47 strict guardrails."""
        raw_exp = pd.DataFrame([
            {"strike": 22700, "type": "CALL", "ltp": 50.0, "oi": 50000},
            {"strike": 22900, "type": "CALL", "ltp": 10.0, "oi": 20000},
            {"strike": 22300, "type": "PUT", "ltp": 50.0, "oi": 50000},
            {"strike": 22100, "type": "PUT", "ltp": 10.0, "oi": 20000}
        ])
        gamma_metrics = {"gex_norm": 5.0, "tv_label": "NORMAL", "gamma_flip_level": 22480, "raw_exposures": raw_exp}
        auto_metrics = {"drift": 0.05, "stability": 80}
        spot = 22500
        walls = (22700, 22300)
        iv_data = {"iv_rank": 45.0}
        quality_score = 8.5
        size = 1.0
        bias_obj = {"bias": "Bullish"}
        rev_score_obj = {"score": 7.5, "label": "HIGH_REVERSION"}
    
        # 1. Gamma Flip Guardrail (Spot 22500 vs Flip 22480 = < 0.2% dist)
        playbook = nde_strategy_logic.generate_strategy_playbook(
            "MEAN_REVERSION", gamma_metrics, auto_metrics, spot, walls, iv_data,
            quality_score, size, bias_obj, rev_score_obj
        )
        assert playbook["action"] == "WAIT_CONFIRMATION"
        assert "Wait for Confirmation" in playbook["strategy"]
    
        # 2. TV AVOID Guardrail
        gamma_metrics["tv_label"] = "AVOID"
        playbook = nde_strategy_logic.generate_strategy_playbook(
            "MEAN_REVERSION", gamma_metrics, auto_metrics, 22695, walls, iv_data,
            quality_score, size, bias_obj, rev_score_obj
        )
        assert playbook["action"] == "STAND ASIDE"
        assert "No Trade (Structural Risk)" in playbook["strategy"]
    
        # 3. Degraded Data Guardrail
        gamma_metrics["tv_label"] = "NORMAL"
        playbook = nde_strategy_logic.generate_strategy_playbook(
            "MEAN_REVERSION", gamma_metrics, auto_metrics, 22695, walls, iv_data,
            quality_score, size, bias_obj, rev_score_obj, source_mode="DEGRADED"
        )
        assert playbook["action"] == "WAIT"
        assert "Data integrity failure" in playbook["strike_plan"]["reason"]
        assert playbook["strike_plan"]["suppressed"] is True
    
        # 4. Low Confidence Guardrail
>       playbook = nde_strategy_logic.generate_strategy_playbook(
            "MEAN_REVERSION", gamma_metrics, auto_metrics, 22695, iv_data,
            2.5, size, bias_obj, rev_score_obj
        )
E       TypeError: generate_strategy_playbook() missing 1 required positional argument: 'reversion_score_obj'

tests/test_nde_logic.py:630: TypeError
_______________ test_far_otm_weekly_walls_fail_premium_viability _______________

    def test_far_otm_weekly_walls_fail_premium_viability():
        """Verifies that low premium OTM walls block execution."""
        raw_exp = pd.DataFrame([
            {"strike": 26000, "type": "CALL", "ltp": 0.5, "oi": 10000},
            {"strike": 23000, "type": "PUT", "ltp": 3.0, "oi": 10000}
        ])
        gamma_metrics = {"gex_norm": 5.0, "tv_label": "NORMAL", "raw_exposures": raw_exp}
        playbook = nde_strategy_logic.generate_strategy_playbook(
>           "MEAN_REVERSION", gamma_metrics, auto_metrics, 25950, (26000, 23000), {},
                                             ^^^^^^^^^^^^
            8.5, 1.0, {"bias": "Neutral"}, {"score": 5.0}, dte=3
        )
E       NameError: name 'auto_metrics' is not defined

tests/test_nde_logic.py:672: NameError
___________________ test_strategy_specific_viability_checks ____________________

    def test_strategy_specific_viability_checks():
        """Verifies that FADE_RESISTANCE only checks call wall viability."""
        # Call wall illiquid, Put wall liquid
        raw_exp = pd.DataFrame([
            {"strike": 22700, "type": "CALL", "ltp": 0.5, "oi": 100}, # Illiquid
            {"strike": 22300, "type": "PUT", "ltp": 50.0, "oi": 50000} # Liquid
        ])
        gamma_metrics = {"gex_norm": 5.0, "raw_exposures": raw_exp}
    
        # FADE_RESISTANCE should FAIL (checks call wall)
        playbook = nde_strategy_logic.generate_strategy_playbook(
            "FADE_RESISTANCE", gamma_metrics, {}, 22695, (22700, 22300), {},
            8.5, 1.0, {}, {}
        )
        assert playbook["action"] == "WAIT"
        assert "Viability Failure" in playbook["strike_plan"]["reason"]
    
        # FADE_SUPPORT should PASS (only checks put wall)
        raw_exp_support = pd.DataFrame([
            {"strike": 22700, "type": "CALL", "ltp": 0.5, "oi": 100},
            {"strike": 22300, "type": "PUT", "ltp": 50.0, "oi": 50000},
            {"strike": 22200, "type": "PUT", "ltp": 10.0, "oi": 20000}, # Add wing for viability
            {"strike": 22695, "type": "CALL", "ltp": 10.0, "oi": 20000} # Add ATM for quality
        ])
        gamma_metrics_support = {"gex_norm": 5.0, "raw_exposures": raw_exp_support}
        playbook = nde_strategy_logic.generate_strategy_playbook(
            "FADE_SUPPORT", gamma_metrics_support, {"stability": 80}, 22305, (22700, 22300), {},
            8.5, 1.0, {}, {}
        )
>       assert playbook["action"] == "FADE_SUPPORT"
E       AssertionError: assert 'WAIT' == 'FADE_SUPPORT'
E         
E         - FADE_SUPPORT
E         + WAIT

tests/test_nde_logic.py:792: AssertionError
=========================== short test summary info ============================
FAILED tests/test_nde_logic.py::test_playbook_mapping_rules - AssertionError:...
FAILED tests/test_nde_logic.py::test_playbook_guardrails - TypeError: generat...
FAILED tests/test_nde_logic.py::test_far_otm_weekly_walls_fail_premium_viability
FAILED tests/test_nde_logic.py::test_strategy_specific_viability_checks - Ass...
========================= 4 failed, 22 passed in 1.35s =========================
